# OpenCVLearn

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BitmapMatUtil.cpp  BitmapMatUtil.h  FaceDetector.cpp  FaceDetector.h  OpenCVLearn.cpp  android_log.h
app/src/main/java/com/tianshaokai/opencv/: BlurActivity.java  BlurActivity2.java  FaceDetectorActivity.java  GrayActivity.java  MainActivity.java  MainThread.java  OpenCVLearn.java  ThreadManagerUtils.java
app/src/main/java/com/tianshaokai/opencv/ui/: BlurActivity.java  BlurActivity2.java  FaceDetectorActivity.java  GrayActivity.java  GrayActivity2.java  IDCardActivity.java  MainActivity.java
app/src/main/res/layout/: activity_blur.xml  activity_gray.xml  activity_layout.xml  activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
